@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-20T16:07:19Z",
-  "count_outdated" : 1314,
-  "uniques_outdated" : 707,
+  "timestamp" : "2023-08-22T08:08:59Z",
+  "count_outdated" : 1316,
+  "uniques_outdated" : 708,
   "count" : 1337,
   "uniques" : 719,
   "clones" : [
-    {
-      "timestamp": "2023-08-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
