@@ -1,12 +1,7 @@
 {
-  "count": 23,
-  "uniques": 4,
+  "count": 21,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-08-08T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
