@@ -1,3 +1,12 @@
+2023-08-22T08:08:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5936148437 # 1845
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-22
+* notice: last 14d: unq all: 3 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 707 1314 / 719 1337
+* notice: next accum: outdated-unq outdated-all / unq all: 708 1316 / 719 1337
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-08] / []
+
 2023-08-20T16:07:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5918364852 # 1840
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
